# claude-code-py

./: .gitignore  CLAUDE.md  README_PYTHON_AGENT.md  build.ts  package.json  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  contracts.py  errors.py  messages.py  query_loop.py
agent/context/: __init__.py  budget.py  compaction.py
agent/editing/: __init__.py  ast_engine.py  engine.py  transactions.py
agent/mcp_integration/: __init__.py  manager.py  stdio_transport.py  transport.py
agent/memory/: __init__.py  retrieval.py  store.py
agent/observability/: __init__.py  events.py
agent/parity/: __init__.py  harness.py  preflight.py  report.py  runner.py  scenarios.py
agent/permissions/: __init__.py  engine.py  models.py
agent/semantic/: __init__.py  graph.py  index.py  lsp_client.py  refactor_fallback.py
agent/session_store/: store.py
agent/subagents/: __init__.py  catalog.py  executor.py  loader.py  model_client.py  models.py  orchestrator.py  roles.py  task_manager.py
agent/tools/: __init__.py  agent_tool.py  ask_user_question_tool.py  base.py  bash_tool.py  builtin.py  enter_worktree_tool.py  exit_worktree_tool.py  file_edit_tool.py  file_read_tool.py  file_safety.py  file_write_tool.py  glob_tool.py  grep_tool.py  lsp_tool.py  mcp_tools.py  notebook_edit_tool.py  operational_tools.py  plan_mode_tools.py  powershell_tool.py  registry.py  runtime.py  send_message_tool.py  shell_safety.py  task_output_tool.py  task_stop_tool.py  todo_write_tool.py  web_fetch_tool.py  web_search_tool.py
agent/verification/: policy.py  (+2 more)
tests/: conftest.py
(+208 files in other folders)
